# academic-paper-obsidian-skill

./: .env.example  .gitignore  README.md  Readme-cn.md  SKILL.md  config.example.json  pyproject.toml
examples/: sample_paper.json  sample_reading_list.md  sample_summary.md
scripts/: __init__.py  attach_pdf_by_doi.py  config.py  convert_and_notify.py  convert_pdf.py  queue_convert_and_notify.py  reading_list.py  write_summary_note.py
templates/: paper_summary_prompt.md
tests/: test_convert_and_notify.py  test_convert_pdf.py  test_doi_matching.py  test_queue_convert_and_notify.py  test_reading_list.py  test_write_summary_note.py
