[project]
name = "academic-paper-obsidian-skill"
version = "0.1.0"
description = "OpenClaw-style skill scripts for Zotero-backed academic paper intake into Obsidian reading lists."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "OpenClaw user workflow" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
